--- a/build.gradle
+++ b/build.gradle
@@ -21,5 +21,22 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
+    
     compile group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "2.6.0"
+    
+    compile group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.9"
+    
+    // https://mvnrepository.com/artifact/org.osgi/org.osgi.service.component.annotations
+	compile group: 'org.osgi', name: 'org.osgi.service.component.annotations', version: '1.3.0'
+
+	// https://mvnrepository.com/artifact/org.osgi/org.osgi.util.tracker
+	compile group: 'org.osgi', name: 'org.osgi.util.tracker', version: '1.5.1'
+	
+	// https://mvnrepository.com/artifact/com.liferay/com.liferay.osgi.util
+	compile group: 'com.liferay', name: 'com.liferay.osgi.util', version: '3.0.9'
+    
+    // https://mvnrepository.com/artifact/com.liferay/com.liferay.journal.api
+	compile group: 'com.liferay', name: 'com.liferay.journal.api', version: '2.6.1'
+	
+	compile group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 }
